tests/ui/extenv/extenv-escaped-var.stderr
error: environment variable `\t` not defined at compile time
  --> $DIR/extenv-escaped-var.rs:2:5
   |
LL |     env!("\t");
   |     ^^^^^^^^^^ in this macro invocation
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `env!`
   |
   = help: use `std::env::var("\t")` to read the variable at run time

error: aborting due to previous error

